--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="owl/assets/owl.carousel.min.css" />
-    <link rel="stylesheet" href="owl/assets/owl.theme.default.min.css" />
-    <link rel="stylesheet" href="/styles.css" />
-    <script src="jquery-3.6.0.min.js"></script>
-    <script src="owl/owl.carousel.min.js"></script>
-    <script src="scripts.js"></script>
+    <link rel="stylesheet" href="./owl/assets/owl.carousel.min.css" />
+    <link rel="stylesheet" href="./owl/assets/owl.theme.default.min.css" />
+    <link rel="stylesheet" href="./styles.css" />
+    <script src="./jquery-3.6.0.min.js"></script>
+    <script src="./owl/owl.carousel.min.js"></script>
+    <script src="./scripts.js"></script>
 
     <title>MagicShot V1</title>
   </head>
@@ -44,7 +44,7 @@
 
         <!-- Set up your HTML -->
         <div
-          class="owl-carousel owl-theme content-margin top-slider"
+          class="home-slider owl-carousel owl-theme content-margin top-slider"
           id="top-slider"
         >
           <div class="slider-header-site">
@@ -102,7 +102,7 @@
       </div>
     </div>
 
-    <div class="section section-three">
+    <div class="section cool-section section-three">
       <div class="section-content">
         <h3 class="title-community">PARTICIPA NA COMUNIDADE</h3>
 
@@ -146,91 +146,328 @@
       </div>
     </div>
 
-
-
-
-
-
     <div class="section section-four">
       <div class="section-content">
-
-
         <img src="magicshot-logo.png" class="magic-shot-logo" />
 
         <h3>JOGA CONOSCO</h3>
 
         <p>Integer mauris mauris, finibus vitae metus volutpat</p>
 
-
         <div class="gamelist">
+          <div class="game-item gm1">
+            <div class="gradient-bg"></div>
 
+            <img class="game-item-logo" src="gta.png" />
+          </div>
 
-            <div class="game-item gm1">
+          <div class="game-item gm2">
+            <div class="gradient-bg"></div>
 
-              <div class="gradient-bg">
+            <img class="game-item-logo" src="csgo.webp" />
+          </div>
 
-              </div>
+          <div class="game-item gm3">
+            <div class="gradient-bg"></div>
 
-              <img class="game-item-logo" src="gta.png" />
+            <img class="game-item-logo" src="minecraft.png" />
+          </div>
 
+          <div class="game-item gm4">
+            <div class="gradient-bg"></div>
 
+            <img class="game-item-logo" src="minecraft.png" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="section cool-section section-five">
+      <div class="section-content">
+        <h1>NOTÍCIAS</h1>
+
+        <div class="container-news">
+          <div class="main-news-container">
+            <div class="news-info-highlight">
+              <h2>
+                Lorem ipsum<br />
+                Dolor sit amet
+              </h2>
             </div>
 
+            <div class="news-desctiption-cnt">
+              <div class="bar-start"></div>
 
+              <p class="description-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
+                iaculis in arcu a aliquam. Donec ut sodales justo, vitae
+                tincidunt nisl. Aenean massa mauris,
+              </p>
+            </div>
+          </div>
 
+          <div class="bar-start"></div>
 
+          <div class="news-list-container">
+            <div class="cool-list-item">
+              <div class="column-left">
+                <div class="top-square-column"></div>
 
-
-            <div class="game-item gm2">
-
-              <div class="gradient-bg">
-
+                <div class="square-column"></div>
               </div>
 
-              <img class="game-item-logo" src="csgo.webp" />
-
-
-            </div>
-
-
-
-
-
-
-
-
-            <div class="game-item gm3">
-
-              <div class="gradient-bg">
-
+              <div class="column-center">
+                <h3 class="title-news">Lorem ipsum dolor sit amet</h3>
+                <p class="short-desc-news">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
+                  iaculis in arcu a aliquam. Donec ut sodales justo, vitae
+                  tincidunt nisl. Aenean massa mauris,
+                </p>
               </div>
 
-              <img class="game-item-logo" src="minecraft.png" />
+              <div class="column-right">
+                <div class="square-column"></div>
 
-
+                <div class="top-square-column"></div>
+              </div>
             </div>
 
+            <div class="cool-list-item">
+              <div class="column-left">
+                <div class="top-square-column"></div>
 
-
-
-
-
-
-            <div class="game-item gm4">
-
-              <div class="gradient-bg">
-
+                <div class="square-column"></div>
               </div>
 
-              <img class="game-item-logo" src="minecraft.png" />
+              <div class="column-center">
+                <h3 class="title-news">Lorem ipsum dolor sit amet</h3>
+                <p class="short-desc-news">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
+                  iaculis in arcu a aliquam. Donec ut sodales justo, vitae
+                  tincidunt nisl. Aenean massa mauris,
+                </p>
+              </div>
 
+              <div class="column-right">
+                <div class="square-column"></div>
 
+                <div class="top-square-column"></div>
+              </div>
             </div>
+
+            <div class="cool-list-item">
+              <div class="column-left">
+                <div class="top-square-column"></div>
+
+                <div class="square-column"></div>
+              </div>
+
+              <div class="column-center">
+                <h3 class="title-news">Lorem ipsum dolor sit amet</h3>
+                <p class="short-desc-news">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
+                  iaculis in arcu a aliquam. Donec ut sodales justo, vitae
+                  tincidunt nisl. Aenean massa mauris,
+                </p>
+              </div>
+
+              <div class="column-right">
+                <div class="square-column"></div>
+
+                <div class="top-square-column"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="section section-six">
+      <div class="section-content">
+        <img src="magicshot-logo.png" class="magic-shot-logo" />
+
+        <h3 class="title-community">próximos eventos</h3>
+
+        <p class="subtitle">
+          Integer mauris mauris, finibus vitae metus volutpat
+        </p>
+
+        <div class="cool-list-item">
+          <div class="column-left">
+            <div class="top-square-column"></div>
+
+            <div class="square-column"></div>
+          </div>
+
+          <div class="column-center">
+            <div class="date-desc">
+              <h3>2ª FEIRA 10/01/2021</h3>
+
+              <p>Descrição evento (Stream de Torneio X)</p>
+            </div>
+
+            <h2 class="schedule">19:00 - 21:00</h2>
+
+            <div class="book-button bg-gradient">
+              <span>AGENDAR</span>
+            </div>
+          </div>
+
+          <div class="column-right">
+            <div class="square-column"></div>
+
+            <div class="top-square-column"></div>
+          </div>
+        </div>
+
+        <div class="cool-list-item">
+          <div class="column-left">
+            <div class="top-square-column"></div>
+
+            <div class="square-column"></div>
+          </div>
+
+          <div class="column-center">
+            <div class="date-desc">
+              <h3>2ª FEIRA 10/01/2021</h3>
+
+              <p>Descrição evento (Stream de Torneio X)</p>
+            </div>
+
+            <h2 class="schedule">19:00 - 21:00</h2>
+
+            <div class="book-button bg-gradient">
+              <span>AGENDAR</span>
+            </div>
+          </div>
+
+          <div class="column-right">
+            <div class="square-column"></div>
+
+            <div class="top-square-column"></div>
+          </div>
+        </div>
+
+        <div class="cool-list-item">
+          <div class="column-left">
+            <div class="top-square-column"></div>
+
+            <div class="square-column"></div>
+          </div>
+
+          <div class="column-center">
+            <div class="date-desc">
+              <h3>2ª FEIRA 10/01/2021</h3>
+
+              <p>Descrição evento (Stream de Torneio X)</p>
+            </div>
+
+            <h2 class="schedule">19:00 - 21:00</h2>
+
+            <div class="book-button bg-gradient">
+              <span>AGENDAR</span>
+            </div>
+          </div>
+
+          <div class="column-right">
+            <div class="square-column"></div>
+
+            <div class="top-square-column"></div>
+          </div>
+        </div>
+
+        <div class="cool-list-item">
+          <div class="column-left">
+            <div class="top-square-column"></div>
+
+            <div class="square-column"></div>
+          </div>
+
+          <div class="column-center">
+            <div class="date-desc">
+              <h3>2ª FEIRA 10/01/2021</h3>
+
+              <p>Descrição evento (Stream de Torneio X)</p>
+            </div>
+
+            <h2 class="schedule">19:00 - 21:00</h2>
+
+            <div class="book-button bg-gradient">
+              <span>AGENDAR</span>
+            </div>
+          </div>
+
+          <div class="column-right">
+            <div class="square-column"></div>
+
+            <div class="top-square-column"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+  
+  
+  
+  
+  
+    <div class="section cool-section section-seven">
+      <div class="section-content">
+
+        <h3 class="title-section">parceiros</h3>
+
+
+        <div class="foto-carousel owl-carousel owl-theme">
+
+          <div class="item">
+            <a href=""><img src="fnac.png" /></a>
+          </div>
+
+          <div class="item">
+            <a href=""><img src="fnac.png" /></a>
+          </div>
+
+
+          <div class="item">
+            <a href=""><img src="fnac.png" /></a>
+          </div>
+
+
+          <div class="item">
+            <a href=""><img src="fnac.png" /></a>
+          </div>
+
+
+          <div class="item">
+            <a href=""><img src="fnac.png" /></a>
+          </div>
+
+
+          <div class="item">
+            <a href=""><img src="fnac.png" /></a>
+          </div>
+
+
+          <div class="item">
+            <a href=""><img src="fnac.png" /></a>
+          </div>
+
+          <div class="item">
+            <a href=""><img src="fnac.png" /></a>
+          </div>
+
+          <div class="item">
+            <a href=""><img src="fnac.png" /></a>
+          </div>
 
         </div>
 
+        <h3 class="title-section">redes sociais</h3>
+
+
       </div>
-  </div>
-      
+    </div>
+  
+  
   </body>
 </html>
