--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,19 @@
   </head>
   <body>
 
-    <div id="mobile-menu">
-
+    <div id="mobile-menu" class="closed">
+    <div class="bg-mobile-menu">
       <div class="top-header-mobile-menu">
-        <img class="logo" src="magicshot-logo.png" />
-        <a href=""></a></a>
+        <a href="#home" class="link-home"><img class="logo" src="magicshot-logo.png" /></a>
+        <span class="socials">
+          <a target="_blank" href="https://www.facebook.com/MagicShotOficial/"><img src="facebook.png" /></a>
+          <a target="_blank" href="https://www.instagram.com/magicshot.gaming/"><img src="instagram.png" /></a>
+          <a target="_blank" href="https://twitter.com/magicshotpt"><img src="twitter.png" /></a>
+        </span>
+        <a href="" id="close-mobile-menu-btn"><img src="close.png" /></a>
       </div>
+
+      <div class="mobile-menu-divider"></div>
 
       <ul class="header-menu">
         <li><a href="#home">Home</a></li>
@@ -32,29 +39,32 @@
         <li><a href="#eventos">Eventos</a></li>
         <li><a href="#contactos">Contactos</a></li>
       </ul>
-
+    </div>
 
     </div>
 
-    <!-- mobile menu -->
+
+
+    <!-- start section -->
+    <div class="section section-one" id="home">
+      <div class="section-content">
+        <div id="top-header-menu">
+         
+
+
+
+    <!-- header mobile -->
     <div id="header-mobile">
       <a href="" class="link-logo"><img class="logo" src="magicshot-logo.png" /></a>
 
 
       <a id="toggle-menu" class="toggle-menu" href=""><img src="menu.png" /></a>
-
-
-
-
-
-
     </div>
-    <!-- end mobile menu -->
+    <!-- end header mobile -->
 
-    <!-- start section -->
-    <div class="section section-one" id="#home">
-      <div class="section-content">
-        <div id="top-header-menu">
+
+
+         
           <div id="header" class="content-padding">
             <div class="header-left">
               <img class="logo" src="magicshot-logo.png" />
